correction padding collapse

--- a/src/sass/Collapse.scss
+++ b/src/sass/Collapse.scss
@@ -24,11 +24,9 @@
   color: v.$main-color;
   line-height: 1.5em;
   font-weight: 400;
-  padding: 0 20px;
   overflow: hidden;
   transition: all 0.2s linear;
   transform-origin: top center;
-  padding: 20px;
   margin-top: -10px;
 }
 
